test/e2e/fixtures/tracing-opentelemetry/queries-collector.json
[
  {"url": "/jaeger/api/services", "method": "GET"},
  {"url": "/jaeger/api/traces?service=ambassador&limit=100", "method": "GET"}
]
