test/e2e/fixtures/tracing-opentelemetry/queries-warmup.json
[
  {"url": "/target/warmup", "method": "GET"},
  {"url": "/jaeger/api/services", "method": "GET"}
]
